:recycle: Utilização do padrão DTO para entrada e saída de dados na API